# blobrange

./: .gitignore  blobrange.md  pyproject.toml
patches/: DESIGN.md  PR_DESCRIPTION.md  README.md  duckdb-python-add-replacement-scan.patch
python/blobrange/: __init__.py  connection.py  listobject.py  pyxll_hooks.py  resolver.py  types.py
tests/: test_listobject.py  test_replacement_scan_e2e.py  test_resolver.py  test_types.py
