[project]
name = "blobrange"
version = "0.1.0"
description = "Uniform relation addressing for Excel objects in DuckDB"
readme = "blobrange.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.2.0",
    "pandas>=3.0.2",
    "pyarrow>=18.0.0",
]

[project.optional-dependencies]
pyxll = ["pyxll>=5.0.0"]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/blobrange"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
